Bug 128913 - Writer doesn't display image revisions that were done in Word (docx)
Summary: Writer doesn't display image revisions that were done in Word (docx)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2019-11-20 11:27 UTC by xarx
Modified: 2021-06-03 16:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test document (89.28 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-11-20 11:28 UTC, xarx
Details
Screenshot of the fix (195.67 KB, image/png)
2021-05-06 16:35 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description xarx 2019-11-20 11:27:15 UTC
Description:
I've created a DOCX in Word 2016. I inserted an image, turned on tracking of changes, and replaced the image with another image.

After opening in LO Writer, the revisions are displayed incorrectly:

* The deleted image is shown as not-deleted. Neither of these images is marked as revised. (see attachment "test.docx")
* In a regular (more complete, non-testing) document, the images are marked as revised, but neither is marked as deleted.

Steps to Reproduce:
In MS Word 2016:
1. Open new document
2. Insert an image
3. Turn revision tracking on
4. Insert another image, delete the first image
5. Save the document as *.docx, and close the document

In LO Writer:
6. Open the document


Actual Results:
The revisions are shown incorrectly in Writer.

Expected Results:
The revisions are displayed correctly, the same way as in Word.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 xarx 2019-11-20 11:28:43 UTC
Created attachment 155969 [details]
Test document
Comment 2 Durgapriyanka 2019-11-20 16:26:06 UTC
Thank you for reporting the bug. I can confirm the bug present in

Version: 6.4.0.0.alpha1+ (x86)
Build ID: ec7374ff84c71edfbb30d6e4dc5b486b6df7107f
CPU threads: 2; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-11-10_21:37:30
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
	

and in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 3 Xisco Faulí 2019-11-21 11:48:59 UTC
@László Németh, I thought you might be interested in this issue...
Comment 4 NISZ LibreOffice Team 2019-11-25 09:10:08 UTC
This is problematic in ODT / the editor too.
Comment 5 Commit Notification 2021-05-06 14:20:21 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ed7271d9d44fe1a0195ae669644f23c01b6960d8

tdf#128913 DOCX: import track changes of inline images

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2021-05-06 14:24:05 UTC
xarx@sms.cz, Xisco: fixed in master, thanks for reporting! László
Comment 7 László Németh 2021-05-06 16:35:22 UTC
Created attachment 171706 [details]
Screenshot of the fix
Comment 8 BogdanB 2021-06-03 12:53:44 UTC
It's ok now, the last image is marked as revised and deleted.

Verified in
Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 3b57ebb445df8a2bc3d916ea79f8af45e20e4e62
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded
Comment 9 László Németh 2021-06-03 16:25:04 UTC
(In reply to BogdanB from comment #8)
> It's ok now, the last image is marked as revised and deleted.
> 
> Verified in
> Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
> Build ID: 3b57ebb445df8a2bc3d916ea79f8af45e20e4e62
> CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL:
> win
> Locale: ro-RO (ro_RO); UI: en-US
> Calc: threaded

@BogdanB: thanks for the verification!