tdf#128913 DOCX: import track changes of inline images

Deleted images were imported as not deleted part of
the document. Both deleted and inserted images lost
their change tracking.

Change-Id: Ia273d307d01c5ea535889bc9951084e96cd7fc50
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115178
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/123949
Tested-by: Balazs Varga <varga.balazs3@nisz.hu>
Reviewed-by: Balazs Varga <varga.balazs3@nisz.hu>