writerfilter/source/dmapper/DomainMapper_Impl.hxx
@@ -407,6 +407,7 @@ struct AnchoredObjectInfo
 {
     css::uno::Reference<css::text::XTextContent> m_xAnchoredObject;
     sal_Int32 m_nLeftMargin = 0;
+    RedlineParamsPtr m_xRedlineForInline;
 };
 
 /// Stores info about objects anchored to a given paragraph.
